--- a/DsEp/web/html/site/html/themes/web.css
+++ b/DsEp/web/html/site/html/themes/web.css
@@ -77,8 +77,8 @@ a:hover,a:active{color:#00c;}
 .gk a:link,
 .gk a:visited{color:#777;}
 .gk a:hover{color:#d1efff;background:#0282c3;text-decoration:underline;}
-.gk a.sm{color:#777;font-size:12px;padding-left:30px;}
-.gk a.sm:hover{color:#d1efff;background:#0282c3;font-size:12px;padding-left:30px;text-decoration:underline;}
+.gk a.sm{color:#777;font-size:14px;padding-left:30px;}
+.gk a.sm:hover{color:#d1efff;background:#0282c3;font-size:14px;padding-left:30px;text-decoration:underline;}
 .gk a.selected{border-radius:3px;color:#d1efff;background:#0282c3;text-decoration:underline;}
 
 
@@ -90,12 +90,17 @@ a:hover,a:active{color:#00c;}
 .listpage .page a:link,
 .listpage .page a:visited{color:#333;text-decoration:none;display:inline-block;}
 .listpage div.logo{font-size:14px;line-height:40px;font-weight:bold;background-color:#f2f2f2;border-bottom:1px solid #E7E7E7;}
+.listpage a.more,
+.listpage a.more:link,
+.listpage a.more:visited{color:#00c;text-decoration:none;display:inline-block;text-decoration:underline;}
 .listpage .list{padding:6px 9px 10px 0px;}
 .listpage .list dl{background-color:#fbfbfb;height:35px;overflow:hidden;width:710px;margin-left:10px;border-bottom:1px dashed #e9e9e9;}
 .listpage .list dt{float:left;line-height:35px;padding-left:15px;width:520px;text-align:left;}
 .listpage .list dd{float:right;line-height:35px;width:100px;text-align:left;}
 .listpage .list dl.title{font-weight:bold;background-color:#f6f6f6;height:35px;border-radius:10px;border-bottom:1px solid #e9e9e9;}
-.listpage .list dt a:hover{color:#ff0000;text-decoration:underline;}
+.listpage .list dl.logo{font-weight:bold;background-color:inherit;height:35px;border:none;}
+.listpage .list dt a:hover,
+.listpage .list dd a:hover{color:#ff0000;text-decoration:underline;}
 .listpage .page{text-align:center;padding:3px 0 10px 15px;width:700px;}
 .listpage .page a,
 .listpage .page a:link,
@@ -103,7 +108,8 @@ a:hover,a:active{color:#00c;}
 .listpage .page a:hover{color:#fff;background-color:#1c72be;text-decoration:underline;cursor:pointer;}
 .listpage .page a.selected,
 .listpage .page a.selected:hover{color:#fff;background-color:#1c72be;text-decoration:none;cursor:default;}
-.listpage div.title{margin:0 auto;width:95%;font-size:16px;color:#db3a00;text-align:center;line-height:80px;border-bottom:1px solid #ddd;word-break:break-all;word-wrap:break-word;}
+.listpage div.title{margin:0 auto;width:95%;font-size:16px;color:#db3a00;text-align:center;line-height:60px;border-bottom:1px solid #ddd;word-break:break-all;word-wrap:break-word;}
+.listpage div.subtitle{margin:0 auto;width:90%;font-size:12px;color:#999;text-align:right;line-height:40px;word-break:break-all;word-wrap:break-word;}
 .listpage div.content{margin:0 auto;width:90%;text-align:left;line-height:30px;padding:20px;word-break:break-all;word-wrap:break-word;}
 
 .foucs {width:400px;height:320px;padding:0;margin:0;overflow:hidden;}
